--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -509,6 +509,9 @@
   "sign_in": {
     "message": "Sign in"
   },
+  "sign_in_or_create_account_on_ghostery_com": {
+    "message": "Sign in or create account on ghostery.com"
+  },
   "simple_view": {
     "message": "Simple View"
   },
