--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Kontodetails"
   },
+  "active": {
+    "message": "Aktiv"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Werbeblocker"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Werbung",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Erlaube Ghostery in privaten Fenstern"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Auf dieser Website blockiert"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Abbrechen"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Essenziell",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Mehr anzeigen"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "Mein Konto"
   },
+  "name": {
+    "message": "Name"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Navigieren Sie zu einer Website, um Ghostery in Aktion zu sehen."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "Keine Aktivitäten erkannt"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "Noch keine Website-Ausnahmen hinzugefügt"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Datenschutz"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Schutzstatus"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "Details zur Aktivität anzeigen"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Besuche unseren Blog"
