--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Account details"
   },
+  "active": {
+    "message": "Active"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Ad-Blocking"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Advertising",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Allow Ghostery in private windows"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Blocked on this website"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Cancel"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Essential",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Expand"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "My Account"
   },
+  "name": {
+    "message": "Name"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Navigate to a website to see Ghostery in action."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "No activities detected"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "No websites exceptions added yet"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Privacy protection"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Protection status"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "View activity details"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Visit our blog"
