--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Detalles de la cuenta"
   },
+  "active": {
+    "message": "Activo"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Bloqueador de anuncios"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Publicidad",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Permitir Ghostery en ventanas privadas"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Bloqueado en este sitio web"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Cancelar"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Esencial",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Expandir"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "Mi cuenta"
   },
+  "name": {
+    "message": "Nombre"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Navega a un sitio web para ver Ghostery en acción."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "No se detectaron actividades"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "No se ha añadido aún ninguna excepción"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Protección de la privacidad"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Estado de protección"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "Ver detalles de la actividad"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Visita nuestro blog"
