--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Détails du compte"
   },
+  "active": {
+    "message": "ACTIF"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Blocage de publicité"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Publicité",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Autorise Ghostery dans les fenêtres privées"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Bloqués sur ce site web"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Annuler"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Essentiels",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Développer"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "Mon compte"
   },
+  "name": {
+    "message": "Nom"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Naviguez jusqu'à un site web pour voir Ghostery en action."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "Aucune activité détectée"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "Aucune exception de site web ajoutée pour l'instant"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Protection de la vie privée"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Statut de protection"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "Afficher les détails de l'activité"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Visite notre blog"
