--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "アカウント詳細"
   },
+  "active": {
+    "message": "アクティブ"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "広告ブロッキング"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "広告",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "プライベートウィンドウでGhosteryを許可する"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "このウェブサイトでブロック済み"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "キャンセル"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "必需",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "展開"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "アカウント"
   },
+  "name": {
+    "message": "名前"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "ホームページにアクセスして、Ghosteryの動作を確認しましょう。"
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "アクティビティは検出されませんでした"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "ウェブサイトの例外はまだ追加されていません"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "プライバシー保護"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "保護ステータス"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "アクティビティの詳細を表示"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "ブログを見る"
