--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "계정 세부정보"
   },
+  "active": {
+    "message": "사용"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "광고 차단"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "광고 ",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "비공개 창에서 고스트리밍 허용"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "이 웹사이트상에서 차단됨"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "취소 "
@@ -222,6 +234,9 @@
   "essential": {
     "message": "필수 ",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "펼치기"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "내 계정 "
   },
+  "name": {
+    "message": "이름 "
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "웹사이트로 이동하여 Ghostery가 어떻게 작동하는지 살펴보세요."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "감지된 활동 없음"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "아직 추가된 웹사이트 예외 없음"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "개인정보 보호"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "보호 상태"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "활동 세부정보 보기"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "블로그 방문하기"
