--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Dane konta"
   },
+  "active": {
+    "message": "Aktywny"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Blokowanie reklam"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Reklama",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Zezwalaj na Ghostery w prywatnych oknach"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Zablokowany na tej stronie"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Anuluj"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Istotne",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Rozwiń"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "Moje konto"
   },
+  "name": {
+    "message": "Nazwa"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Przejdź na stronę internetową, aby zobaczyć, jak działa Ghostery."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "Nie wykryto aktywności"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "Nie dodano jeszcze żadnych wyjątków dla tej witryny"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Ochrona prywatności"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Status ochrony"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "Zobacz szczegóły aktywności"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Odwiedź nasz blog"
