--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -22,6 +22,12 @@
   "account_details": {
     "message": "Данные аккаунта"
   },
+  "active": {
+    "message": "Активный"
+  },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Блокировка рекламы"
   },
@@ -50,6 +56,9 @@
   "advertising": {
     "message": "Реклама",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "All websites with adjusted protection status will be listed here."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Разреши Ghostery в приватных окнах"
@@ -101,6 +110,9 @@
   },
   "blocked_on_this_website": {
     "message": "Заблокировано на этом сайте"
+  },
+  "blocked_or_trusted_individual_activities_on_@_0_": {
+    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Отмена"
@@ -222,6 +234,9 @@
   "essential": {
     "message": "Важное",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceptions"
   },
   "expand": {
     "message": "Развернуть"
@@ -376,6 +391,9 @@
   "my_account": {
     "message": "Моя учетная запись"
   },
+  "name": {
+    "message": "Имя"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Перейдите на любой сайт, чтобы увидеть, как работает Ghostery."
   },
@@ -384,6 +402,9 @@
   },
   "no_activities_detected": {
     "message": "Действия не обнаружены"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No protection exceptions added yet"
   },
   "no_websites_exceptions_added_yet": {
     "message": "Сайтов, добавленных в исключения, пока нет"
@@ -451,6 +472,9 @@
   },
   "privacy_protection": {
     "message": "Защита конфиденциальности"
+  },
+  "protection_exceptions": {
+    "message": "Protection exceptions"
   },
   "protection_status": {
     "message": "Статус защиты"
@@ -601,6 +625,9 @@
   },
   "view_activity_details": {
     "message": "Просмотреть подробности действия"
+  },
+  "view_whotracks_me_statistical_report": {
+    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Посетите наш блог"
