--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -55,7 +55,7 @@
     "description": "Tracker category name"
   },
   "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
-    "message": "All websites with adjusted protection status will be listed here."
+    "message": "Todos os sites com status de proteção ajustado serão listados aqui."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Permitir o Ghostery em janelas privadas"
@@ -107,9 +107,6 @@
   },
   "blocked_on_this_website": {
     "message": "Bloqueado neste site"
-  },
-  "blocked_or_trusted_individual_activities_on_@_0_": {
-    "message": "Blocked or Trusted individual activities on $${0}"
   },
   "cancel": {
     "message": "Cancelar"
@@ -230,7 +227,7 @@
     "description": "Tracker category name"
   },
   "exceptions": {
-    "message": "Exceptions"
+    "message": "Exceções"
   },
   "expand": {
     "message": "Expandir"
@@ -357,12 +354,6 @@
   "load_more": {
     "message": "Carregar mais"
   },
-  "manifest_name": {
-    "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
-  },
-  "manifest_short_description": {
-    "message": "O Ghostery é uma poderosa extensão de privacidade. Bloqueie anúncios, interrompa rastreadores e acelere sites."
-  },
   "menu": {
     "message": "Menu"
   },
@@ -398,7 +389,7 @@
     "message": "Nenhuma atividade detectada"
   },
   "no_protection_exceptions_added_yet": {
-    "message": "No protection exceptions added yet"
+    "message": "Nenhuma exceção de proteção adicionada ainda."
   },
   "no_websites_exceptions_added_yet": {
     "message": "Nenhuma exceção de site adicionada ainda"
@@ -468,7 +459,7 @@
     "message": "Proteção de privacidade"
   },
   "protection_exceptions": {
-    "message": "Protection exceptions"
+    "message": "Exceções de proteção"
   },
   "protection_status": {
     "message": "Status de proteção"
@@ -525,7 +516,7 @@
     "message": "Entrar"
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "Faça login ou crie uma conta em ghostery.com"
   },
   "simple_view": {
     "message": "Visão simples"
@@ -616,9 +607,6 @@
   },
   "view_activity_details": {
     "message": "Ver detalhes da atividade"
-  },
-  "view_whotracks_me_statistical_report": {
-    "message": "View WhoTracks.Me statistical report"
   },
   "visit_our_blog": {
     "message": "Visite nosso blog"
