--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -354,6 +354,12 @@
   "load_more": {
     "message": "Mehr laden"
   },
+  "manifest_name": {
+    "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
+  },
+  "manifest_short_description": {
+    "message": "Ghostery ist eine leistungsstarke Datenschutz-Erweiterung. Damit können Sie Werbung blockieren, Tracker stoppen und Websites beschleunigen."
+  },
   "menu": {
     "message": "Menü"
   },
